crates/jp_conversation/src/snapshots/jp_conversation__stream__tests__conversation_stream_serialization_roundtrip.snap
---
source: crates/jp_conversation/src/stream.rs
expression: "&stream"
---
[
  {
    "type": "config_delta",
    "timestamp": "2020-01-01 00:00:00.0",
    "delta": {
      "inherit": false,
      "config_load_paths": [],
      "extends": [],
      "assistant": {
        "tool_choice": "auto",
        "model": {
          "id": {
            "provider": "anthropic",
            "name": "test"
          },
          "parameters": {
            "stop_words": [],
            "other": {}
          }
        },
        "request": {
          "max_retries": 0,
          "base_backoff_ms": 0,
          "max_backoff_secs": 0
        }
      },
      "conversation": {
        "title": {
          "generate": {
            "auto": false
          }
        },
        "tools": {
          "*": {
            "run": "ask",
            "result": "unattended",
            "style": {
              "hidden": false,
              "inline_results": {
                "truncate": {
                  "lines": 10
                }
              },
              "results_file_link": "full",
              "parameters": "json"
            }
          }
        }
      },
      "style": {
        "code": {
          "color": false,
          "line_numbers": false,
          "file_link": "osc8",
          "copy_link": "osc8"
        },
        "markdown": {
          "wrap_width": 0,
          "table_max_column_width": 0,
          "hr_style": "line"
        },
        "reasoning": {
          "display": "full"
        },
        "streaming": {
          "progress": {
            "show": false,
            "delay_secs": 0,
            "interval_ms": 0
          }
        },
        "tool_call": {
          "show": false,
          "progress": {
            "show": false,
            "delay_secs": 0,
            "interval_ms": 0
          },
          "preparing": {
            "show": false,
            "delay_secs": 0,
            "interval_ms": 0
          }
        },
        "typewriter": {
          "text_delay": {
            "secs": 0,
            "nanos": 0
          },
          "code_delay": {
            "secs": 0,
            "nanos": 0
          }
        }
      },
      "editor": {
        "envs": []
      },
      "template": {
        "values": {}
      },
      "providers": {
        "llm": {
          "anthropic": {
            "api_key_env": "",
            "base_url": "",
            "chain_on_max_tokens": false,
            "beta_headers": []
          },
          "deepseek": {
            "api_key_env": "",
            "base_url": ""
          },
          "google": {
            "api_key_env": "",
            "base_url": ""
          },
          "llamacpp": {
            "base_url": ""
          },
          "ollama": {
            "base_url": ""
          },
          "openai": {
            "api_key_env": "",
            "base_url": "",
            "base_url_env": ""
          },
          "openrouter": {
            "api_key_env": "",
            "app_name": "",
            "base_url": ""
          }
        }
      }
    }
  }
]
